--- a/estore-api/src/main/resources/application.properties
+++ b/estore-api/src/main/resources/application.properties
@@ -2,3 +2,4 @@ server.error.include-message=always
 products.file=data/inventory.json
 carts.file=data/carts.json
 users.file=data/users.json
+reviews.file=data/reviews.json
